# linreg

./: .gitignore  CMakeLists.txt  README.md
lib/linreg/include/: linreg.hpp
lib/linreg/src/: linreg.cpp
